test/sema/typeck/module/class-new-not-accessible1.out
error: element is not accessible.
--> class-new-not-accessible1.dora:1:10
 | fn f() { foo::Foo(1i32); }
            ~~~~~~~~~~~~~~
 | mod foo {
 |     class Foo(Int32)
1 error found.
