test/sema/typeck/module/class-new-not-accessible1.dora
fn f() { foo::Foo(1i32); }
mod foo {
    class Foo(Int32)
}
